# ai-odoo-finder

./: .env.example  .gitignore  Dockerfile  LICENSE  NEXT_STEPS.md  README.md  SPRINT_PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  etl.yml  tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_add_readme_column.py
app/: __init__.py
app/services/: hybrid_search_service.py
backend/app/: config.py  (+5 more)
claude-skill/: README.md  SKILL.md  examples.md  prompts.md
docs/: API.md  ARCHITECTURE.md  BRANDING.md  CONTRIBUTING.md  CREATED_FILES.md  Claude_Skill_v2.md  DEPLOYMENT.md  GALLERY.md  INDEX.md  MCP_DESIGN.md  MCP_REMOTE_SUMMARY.md  MEJORAS_BUSQUEDA.md  NEON_SETUP.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  ROADMAP.md  SESSION_2025-11-15.md  SYSTEM_IMPROVEMENTS.md  TECHNICAL_GUIDE.md
frontend/: package.json  tsconfig.json
migrations/: 002_add_fulltext_search.sql  002_add_fulltext_search_down.sql
scripts/: benchmark.py  compare_benchmarks.py  etl_oca_modules.py  explore_oca.py  init_db.py  migrate_data.py  run_benchmark.py  run_server.py  setup_database.py  test_api.py  test_apis.py  test_search.py  update_embeddings.py  validate_expected_modules.py
specs/: EXECUTIVE_SUMMARY.md  README.md
tests/: benchmark_queries.json  test_benchmark_metrics.py  test_hybrid_search_service.py  test_phase1_acceptance.py
(+73 files in other folders)
